setup font/font-awesome icons, setup social media links in footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <a href="index.html" id="logo"><h1>restaurant name</h1></a>
+        <nav>
+            <a href="index.html"><h3>home</h3></a>
+            <a href="about.html"><h3>about</h3></a>
+            <a href="menu.html"><h3>menu</h3></a>
+            <a href="gallery.html"><h3>gallery</h3></a>
+            <a href="contact.html"><h3>contact</h3></a>
+        </nav>
+    </header>
+    <section id="home-bg">
+
+    </section>
+    <footer>
+        <a href="contact.html"><h1>reserve a spot</h1></a>
+        <div id="media-links">
+            <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-square-facebook"></i></i></a>
+            <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+            <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+    </footer>
+    <!-- FONT-AWESOME SCRIPT (CODE TAKEN FROM FONT-AWESOME SITE) -->
+    <script src="https://kit.fontawesome.com/3920a9a7fd.js" crossorigin="anonymous"></script>
 </body>
 </html>
