added bg-image to index.html/initial styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <section id="home-bg">
-
+        <img src="assets/images/ryan-plomp-oi2OWSQ5Q24-unsplash_1920-900.webp" alt="A picture of a reataurant table">
     </section>
     <footer>
         <a href="contact.html"><h1>reserve a spot</h1></a>
