aditiona; styling for index.html

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
             <a href="contact.html"><h3>contact</h3></a>
         </nav>
     </header>
-    <section id="home-bg">
-        <img src="assets/images/ryan-plomp-oi2OWSQ5Q24-unsplash_1920-900.webp" alt="A picture of a reataurant table">
-    </section>
+    <section id="home-bg"></section>
     <footer>
         <a href="contact.html"><h1>reserve a spot</h1></a>
         <div id="media-links">
