added placeholder content and initial styling for about.html

--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
         <a href="index.html" id="logo"><h1>restaurant name</h1></a>
         <nav id="nav-bar">
             <ul id="nav-menu">
-                <li class="nav-item">
-                    <a href="index.html"><h3>home</h3></a>
-                </li>
                 <li>
-                    <a href="about.html"><h3>about</h3></a>
-                </li>
-                <li>
-                    <a href="menu.html"><h3>menu</h3></a>
+                    <a href="contact.html"><h3>contact</h3></a>
                 </li>
                 <li>
                     <a href="gallery.html"><h3>gallery</h3></a>
                 </li>
                 <li>
-                    <a href="contact.html"><h3>contact</h3></a>
+                    <a href="menu.html"><h3>menu</h3></a>
+                </li>
+                <li>
+                    <a href="about.html"><h3>about</h3></a>
+                </li>
+                <li class="nav-item">
+                    <a href="index.html"><h3>home</h3></a>
                 </li>
             </ul>
         </nav>
@@ -34,9 +34,9 @@
     <footer>
         <a href="contact.html"><h1>reserve a spot</h1></a>
         <div id="media-links">
-            <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-square-facebook"></i></i></a>
-            <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
-            <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com" target="_blank" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></i></a>
+            <a href="https://www.twitter.com" target="_blank" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
+            <a href="https://www.instagram.com" target="_blank" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </footer>
     <!-- FONT-AWESOME SCRIPT (CODE TAKEN FROM FONT-AWESOME SITE) -->
