improved header/footer positioning ahead of responsive design, restyled home-bg

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <section id="home-bg"></section>
     <footer>
-        <a href="contact.html"><h1>reserve a spot</h1></a>
+        <a href="contact.html" id="footer-contact-link"><h1>reserve a spot</h1></a>
         <div id="media-links">
             <a href="https://www.facebook.com" target="_blank" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></i></a>
             <a href="https://www.twitter.com" target="_blank" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
