--- a/contact.html
+++ b/contact.html
@@ -30,51 +30,52 @@
             </ul>
         </nav>
     </header>
-    <section id="contact">
-        <div id="iframe-wrapper">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2452.353861692761!2d4.303477599999999!3d52.073287900000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c5b72901e403b5%3A0x113685c65ccecc86!2sPrinsegracht%2080%2C%202512%20GC%20Den%20Haag!5e0!3m2!1snl!2snl!4v1660919987515!5m2!1snl!2snl" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <div id="adress-wrapper">
-            <div id="adress">
-                <h4>Restaurant</h4>
-                <h5>Prinsengracht 80</h5>
-                <h5>2512 GC</h5>
-                <h5>Den Haag NL</h5>
+    <section>
+        <div id="contact-wrapper">
+            <div id="iframe-wrapper">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2452.353861692761!2d4.303477599999999!3d52.073287900000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c5b72901e403b5%3A0x113685c65ccecc86!2sPrinsegracht%2080%2C%202512%20GC%20Den%20Haag!5e0!3m2!1snl!2snl!4v1660919987515!5m2!1snl!2snl" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div id="contact-info">
-                <h4>email@adres.org</h4>
-                <h4>070-4084540</h4>
+            <div id="adress-wrapper">
+                <div id="adress">
+                    <h4>Restaurant</h4>
+                    <h5>Prinsengracht 80</h5>
+                    <h5>2512 GC</h5>
+                    <h5>Den Haag NL</h5>
+                </div>
+                <div id="contact-info">
+                    <h4>email@adres.org</h4>
+                    <h4>070-4084540</h4>
+                </div>
+            </div>
+            <div id="form-wrapper">
+                <div id="form-header">
+                    <h3>Let us know you are coming!</h3>
+                </div>
+                <form action="https://formdump.codeinstitute.net" method="post">
+                    <label for="fname">First Name</label>
+                    <input type="text" name="fname" required>
+                    <br>
+                    <label for="lname">Last Name</label>
+                    <input type="text" name="lname" required>
+                    <br>
+                    <label for="email">Email Adress</label>
+                    <input type="email" name="email" required>
+                    <br>
+                    <label for="phone">Phone Number</label>
+                    <input type="phone" name="phone" required>
+                    <br>
+                    <label for="datetime">Date & Time</label>
+                    <input type="datetime-local" name="datetime" required>
+                    <br>
+                    <label for="group">Group Size</label>
+                    <input type="number" name="group" required>
+                    <br>
+                    <input type="submit">
+                    <br>
+                    <p>You will álways receive confirmation via email ánd telephone.</p>
+                </form>
             </div>
         </div>
-        <div id="form-wrapper">
-            <div id="form-header">
-                <h3>Let us know you are coming!</h3>
-            </div>
-            <form action="https://formdump.codeinstitute.net" method="post">
-                <label for="fname">First Name</label>
-                <input type="text" name="fname" required>
-                <br>
-                <label for="lname">Last Name</label>
-                <input type="text" name="lname" required>
-                <br>
-                <label for="email">Email Adress</label>
-                <input type="email" name="email" required>
-                <br>
-                <label for="phone">Phone Number</label>
-                <input type="phone" name="phone" required>
-                <br>
-                <label for="datetime">Date & Time</label>
-                <input type="datetime-local" name="datetime" required>
-                <br>
-                <label for="group">Group Size</label>
-                <input type="number" name="group" required>
-                <br>
-                <input type="submit">
-                <br>
-                <p>You will álways receive confirmation via email ánd telephone.</p>
-            </form>
-        </div>
-
     </section>
     <footer>
         <a href="contact.html" id="footer-contact-link"><h1>reserve a spot</h1></a>
