added responsive design to header(dropdown)/footer

--- a/gallery.html
+++ b/gallery.html
@@ -28,6 +28,13 @@
                     <a href="index.html"><h3>home</h3></a>
                 </li>
             </ul>
+            <select onchange="window.open(this.value,'_self');" id="nav-dropdown">
+                <option value="#">Gallery</option>
+                <option value="index.html">Home</option>
+                <option value="about.html">About</option>
+                <option value="menu.html">Gallery</option>
+                <option value="contact.html">Contact</option>
+            </select>
         </nav>
     </header>
     <section id="gallery">
