--- a/about.html
+++ b/about.html
@@ -28,6 +28,13 @@
                     <a href="index.html"><h3>home</h3></a>
                 </li>
             </ul>
+            <select onchange="window.open(this.value,'_self');" id="nav-dropdown">
+                <option value="#">About</option>
+                <option value="index.html">Home</option>
+                <option value="menu.html">Menu</option>
+                <option value="gallery.html">Gallery</option>
+                <option value="contact.html">Contact</option>
+            </select>
         </nav>
     </header>
     <section id="about">
