added current-page indicator to nav-bar menu

--- a/about.html
+++ b/about.html
@@ -22,9 +22,9 @@
                     <a href="menu.html"><h3>menu</h3></a>
                 </li>
                 <li>
-                    <a href="about.html"><h3>about</h3></a>
+                    <a href="about.html" class="current-page"><h3>about</h3></a>
                 </li>
-                <li class="nav-item">
+                <li>
                     <a href="index.html"><h3>home</h3></a>
                 </li>
             </ul>
