--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
                     <a href="contact.html"><h3>contact</h3></a>
                 </li>
                 <li>
-                    <a href="gallery.html"><h3>gallery</h3></a>
+                    <a href="gallery.html" class="current-page"><h3>gallery</h3></a>
                 </li>
                 <li>
                     <a href="menu.html"><h3>menu</h3></a>
@@ -24,7 +24,7 @@
                 <li>
                     <a href="about.html"><h3>about</h3></a>
                 </li>
-                <li class="nav-item">
+                <li>
                     <a href="index.html"><h3>home</h3></a>
                 </li>
             </ul>
