--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <li>
                     <a href="about.html"><h3>about</h3></a>
                 </li>
-                <li class="nav-item">
-                    <a href="index.html"><h3>home</h3></a>
+                <li>
+                    <a href="index.html" class="current-page"><h3>home</h3></a>
                 </li>
             </ul>
             <select onchange="window.open(this.value,'_self');" id="nav-dropdown">
