--- a/menu.html
+++ b/menu.html
@@ -19,12 +19,12 @@
                     <a href="gallery.html"><h3>gallery</h3></a>
                 </li>
                 <li>
-                    <a href="menu.html"><h3>menu</h3></a>
+                    <a href="menu.html" class="current-page"><h3>menu</h3></a>
                 </li>
                 <li>
                     <a href="about.html"><h3>about</h3></a>
                 </li>
-                <li class="nav-item">
+                <li>
                     <a href="index.html"><h3>home</h3></a>
                 </li>
             </ul>
