--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         <nav id="nav-bar">
             <ul id="nav-menu">
                 <li>
-                    <a href="contact.html"><h3>contact</h3></a>
+                    <a href="contact.html" class="current-page"><h3>contact</h3></a>
                 </li>
                 <li>
                     <a href="gallery.html"><h3>gallery</h3></a>
@@ -24,7 +24,7 @@
                 <li>
                     <a href="about.html"><h3>about</h3></a>
                 </li>
-                <li class="nav-item">
+                <li >
                     <a href="index.html"><h3>home</h3></a>
                 </li>
             </ul>
