added highlight on hover to side-bar links

--- a/menu.html
+++ b/menu.html
@@ -46,13 +46,13 @@
                 <li><a href="#mains-wrapper">Mains</a></li>
             </ul>
             <ul>
-                <li><a href="#deserts-wrapper">deserts</a></li>
+                <li><a href="#deserts-wrapper">Deserts</a></li>
             </ul>
             <ul>
-                <li><a href="#drinks-wrapper">drinks</a></li>
+                <li><a href="#drinks-wrapper">Drinks</a></li>
             </ul>
             <ul>
-                <li><a href="#bites-wrapper">bites</a></li>
+                <li><a href="#bites-wrapper">Bites</a></li>
             </ul>
         </div>
         <div id="starters-wrapper">
