added responsive design to about page

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         </nav>
     </header>
     <section id="about">
-        <img src="assets/images/indoor-shot_1000x1500.webp" alt="">
+        <img src="assets/images/indoor-shot_1000x1500.webp" id="about-img" alt="">
         <article id="about-txt">
             <h2>About us:</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
