--- a/menu.html
+++ b/menu.html
@@ -40,22 +40,22 @@
     <section id="menu">
         <div id="sidebar">
             <ul>
-                <li><a href="#starters-wrapper">Starters</a></li>
+                <li><a href="#starters">Starters</a></li>
             </ul>
             <ul>
-                <li><a href="#mains-wrapper">Mains</a></li>
+                <li><a href="#mains">Mains</a></li>
             </ul>
             <ul>
-                <li><a href="#deserts-wrapper">Deserts</a></li>
+                <li><a href="#deserts">Deserts</a></li>
             </ul>
             <ul>
-                <li><a href="#drinks-wrapper">Drinks</a></li>
+                <li><a href="#drinks">Drinks</a></li>
             </ul>
             <ul>
-                <li><a href="#bites-wrapper">Bites</a></li>
+                <li><a href="#bites">Bites</a></li>
             </ul>
         </div>
-        <div id="starters-wrapper">
+        <div id="starters" class="menu-section-wrapper">
             <div id="starters-txt">
                 <h3>Soup</h3>
                 <p>
@@ -78,7 +78,7 @@
             </div>
             <img id="starters-img"  src="assets/images/menu/tortilla.webp" alt="plate of food">
         </div>
-        <div id="mains-wrapper">
+        <div id="mains" class="menu-section-wrapper">
             <div id="mains-txt">
                 <h3>Soup</h3>
                 <p>
@@ -101,7 +101,7 @@
             </div>
             <img id="mains-img"  src="assets/images/menu/tortilla.webp" alt="plate of food">
         </div>
-        <div id="deserts-wrapper">
+        <div id="deserts" class="menu-section-wrapper">
             <div id="deserts-txt">
                 <h3>Soup</h3>
                 <p>
@@ -124,7 +124,7 @@
             </div>
             <img id="deserts-img"  src="assets/images/menu/tortilla.webp" alt="plate of food">
         </div>
-        <div id="drinks-wrapper">
+        <div id="drinks" class="menu-section-wrapper">
             <div id="drinks-txt">
                 <h3>Soup</h3>
                 <p>
@@ -147,7 +147,7 @@
             </div>
             <img id="drinks-img"  src="assets/images/menu/tortilla.webp" alt="plate of food">
         </div>
-        <div id="bites-wrapper">
+        <div id="bites" class="menu-section-wrapper">
             <div id="bites-txt">
                 <h3>Soup</h3>
                 <p>
