--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html" id="logo"><h1>restaurant name</h1></a>
+        <a href="index.html" id="logo"><h1>Hole in the Wall</h1></a>
         <nav id="nav-bar">
             <ul id="nav-menu">
                 <li>
