improved resp. design for contact.html

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
             </div>
             <div id="adress-wrapper">
                 <div id="adress">
-                    <h4>Restaurant</h4>
+                    <h4>Hole in the Wall</h4>
                     <h5>Prinsengracht 80</h5>
                     <h5>2512 GC</h5>
                     <h5>Den Haag NL</h5>
