restyled  menu.html to remove redundant css

--- a/menu.html
+++ b/menu.html
@@ -56,8 +56,8 @@
             </ul>
         </div>
         <div id="starters" class="menu-section-wrapper">
-            <div id="starters-txt">
-                <h3>Soup</h3>
+            <div class="menu-section-txt">
+                <h3>Soup1</h3>
                 <p>
                     Soup made of something served with something <br>
                     and something else too. <br>
@@ -76,11 +76,11 @@
                     €205.99
                 </p>
             </div>
-            <img id="starters-img"  src="assets/images/menu/tortilla.webp" alt="plate of food">
+            <img class="menu-section-img"  src="assets/images/menu/tortilla.webp" alt="plate of food">
         </div>
         <div id="mains" class="menu-section-wrapper">
-            <div id="mains-txt">
-                <h3>Soup</h3>
+            <div class="menu-section-txt">
+                <h3>Soup2</h3>
                 <p>
                     Soup made of something served with something <br>
                     and something else too. <br>
@@ -99,11 +99,11 @@
                     €205.99
                 </p>
             </div>
-            <img id="mains-img"  src="assets/images/menu/tortilla.webp" alt="plate of food">
+            <img class="menu-section-img"  src="assets/images/menu/tortilla.webp" alt="plate of food">
         </div>
         <div id="deserts" class="menu-section-wrapper">
-            <div id="deserts-txt">
-                <h3>Soup</h3>
+            <div class="menu-section-txt">
+                <h3>Soup3</h3>
                 <p>
                     Soup made of something served with something <br>
                     and something else too. <br>
@@ -122,11 +122,11 @@
                     €205.99
                 </p>
             </div>
-            <img id="deserts-img"  src="assets/images/menu/tortilla.webp" alt="plate of food">
+            <img class="menu-section-img" src="assets/images/menu/tortilla.webp" alt="plate of food">
         </div>
         <div id="drinks" class="menu-section-wrapper">
-            <div id="drinks-txt">
-                <h3>Soup</h3>
+            <div class="menu-section-txt">
+                <h3>Soup4</h3>
                 <p>
                     Soup made of something served with something <br>
                     and something else too. <br>
@@ -145,11 +145,11 @@
                     €205.99
                 </p>
             </div>
-            <img id="drinks-img"  src="assets/images/menu/tortilla.webp" alt="plate of food">
+            <img class="menu-section-img"  src="assets/images/menu/tortilla.webp" alt="plate of food">
         </div>
         <div id="bites" class="menu-section-wrapper">
-            <div id="bites-txt">
-                <h3>Soup</h3>
+            <div class="menu-section-txt">
+                <h3>Soup5</h3>
                 <p>
                     Soup made of something served with something <br>
                     and something else too. <br>
@@ -168,7 +168,7 @@
                     €205.99
                 </p>
             </div>
-            <img id="bites-img"  src="assets/images/menu/tortilla.webp" alt="plate of food">
+            <img class="menu-section-img"  src="assets/images/menu/tortilla.webp" alt="plate of food">
         </div>
     </section>
     <footer>
