added minor adjustment to menu elemnt sizes

--- a/menu.html
+++ b/menu.html
@@ -57,6 +57,7 @@
         </div>
         <div id="starters" class="menu-section-wrapper">
             <div class="menu-section-txt">
+                <h2>Starters</h2>
                 <h3>Soup1</h3>
                 <p>
                     Soup made of something served with something <br>
@@ -80,6 +81,7 @@
         </div>
         <div id="mains" class="menu-section-wrapper">
             <div class="menu-section-txt">
+                <h2>Mains</h2>
                 <h3>Soup2</h3>
                 <p>
                     Soup made of something served with something <br>
@@ -103,6 +105,7 @@
         </div>
         <div id="deserts" class="menu-section-wrapper">
             <div class="menu-section-txt">
+                <h2>Deserts</h2>
                 <h3>Soup3</h3>
                 <p>
                     Soup made of something served with something <br>
@@ -126,6 +129,7 @@
         </div>
         <div id="drinks" class="menu-section-wrapper">
             <div class="menu-section-txt">
+                <h2>Drinks</h2>
                 <h3>Soup4</h3>
                 <p>
                     Soup made of something served with something <br>
@@ -149,6 +153,7 @@
         </div>
         <div id="bites" class="menu-section-wrapper">
             <div class="menu-section-txt">
+                <h2>Bites</h2>
                 <h3>Soup5</h3>
                 <p>
                     Soup made of something served with something <br>
