--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
             </select>
         </nav>
     </header>
-    <section id="home-bg"></section>
+    <section id="oops-bg"></section>
     <footer>
         <a href="contact.html" id="footer-contact-link"><h1>Reservations</h1></a>
         <div id="media-links">
