added link to home to 404.html

--- a/404.html
+++ b/404.html
@@ -39,7 +39,9 @@
             </select>
         </nav>
     </header>
-    <section id="oops-bg"></section>
+    <section id="oops-bg">
+        <a href="index.html">Take me back</a>
+    </section>
     <footer>
         <a href="contact.html" id="footer-contact-link"><h1>Reservations</h1></a>
         <div id="media-links">
