--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                 </div>
                 <form action="https://formdump.codeinstitute.net" method="post">
                     <label for="fname">First Name</label>
-                    <input type="text" name="fname" required>
+                    <input type="text" id="fname" name="fname" required>
                     <br>
                     <label for="lname">Last Name</label>
                     <input type="text" name="lname" required>
