--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
                     <input type="text" id="fname" name="fname" required>
                     <br>
                     <label for="lname">Last Name</label>
-                    <input type="text" name="lname" required>
+                    <input type="text" id="lname" name="lname" required>
                     <br>
                     <label for="email">Email Adress</label>
                     <input type="email" name="email" required>
