added id-tag to email input in contact.html

--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                     <input type="text" id="lname" name="lname" required>
                     <br>
                     <label for="email">Email Adress</label>
-                    <input type="email" name="email" required>
+                    <input type="email" id="email" name="email" required>
                     <br>
                     <label for="phone">Phone Number</label>
                     <input type="tel" name="phone" required>
