added id-tag to phone input in contact.html

--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                     <input type="email" id="email" name="email" required>
                     <br>
                     <label for="phone">Phone Number</label>
-                    <input type="tel" name="phone" required>
+                    <input type="tel" id="phone" name="phone" required>
                     <br>
                     <label for="datetime">Date & Time</label>
                     <input type="datetime-local" name="datetime" required>
