--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
                     <input type="tel" id="phone" name="phone" required>
                     <br>
                     <label for="datetime">Date & Time</label>
-                    <input type="datetime-local" name="datetime" required>
+                    <input type="datetime-local" id="datetime" name="datetime" required>
                     <br>
                     <label for="group">Group Size</label>
                     <input type="number" name="group" required>
