added id-tag to group input  contact.html

--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
                     <input type="datetime-local" id="datetime" name="datetime" required>
                     <br>
                     <label for="group">Group Size</label>
-                    <input type="number" name="group" required>
+                    <input type="number" id="group" name="group" required>
                     <br>
                     <input type="submit">
                     <p>You will álways receive confirmation via email ánd telephone.</p>
