imrpoved indentation for menu.html

--- a/menu.html
+++ b/menu.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,25 +10,38 @@
     <!-- Favicon -->
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <header>
-        <a href="index.html" id="logo"><h1>Hole in the Wall</h1></a>
+        <a href="index.html" id="logo">
+            <h1>Hole in the Wall</h1>
+        </a>
         <nav id="nav-bar">
             <ul id="nav-menu">
                 <li>
-                    <a href="contact.html"><h3>contact</h3></a>
+                    <a href="contact.html">
+                        <h3>contact</h3>
+                    </a>
                 </li>
                 <li>
-                    <a href="gallery.html"><h3>gallery</h3></a>
+                    <a href="gallery.html">
+                        <h3>gallery</h3>
+                    </a>
                 </li>
                 <li>
-                    <a href="menu.html" class="current-page"><h3>menu</h3></a>
+                    <a href="menu.html" class="current-page">
+                        <h3>menu</h3>
+                    </a>
                 </li>
                 <li>
-                    <a href="about.html"><h3>about</h3></a>
+                    <a href="about.html">
+                        <h3>about</h3>
+                    </a>
                 </li>
                 <li>
-                    <a href="index.html"><h3>home</h3></a>
+                    <a href="index.html">
+                        <h3>home</h3>
+                    </a>
                 </li>
             </ul>
             <select onchange="window.open(this.value,'_self');" id="nav-dropdown">
@@ -79,7 +93,7 @@
                     €205.99
                 </p>
             </div>
-            <img class="menu-section-img"  src="assets/images/menu/starters-img.webp" alt="plate of food">
+            <img class="menu-section-img" src="assets/images/menu/starters-img.webp" alt="plate of food">
         </div>
         <div id="mains" class="menu-section-wrapper">
             <div class="menu-section-txt">
@@ -103,7 +117,7 @@
                     €205.99
                 </p>
             </div>
-            <img class="menu-section-img"  src="assets/images/menu/mains-img.webp" alt="plate of food">
+            <img class="menu-section-img" src="assets/images/menu/mains-img.webp" alt="plate of food">
         </div>
         <div id="deserts" class="menu-section-wrapper">
             <div class="menu-section-txt">
@@ -151,7 +165,7 @@
                     €205.99
                 </p>
             </div>
-            <img class="menu-section-img"  src="assets/images/menu/drinks-img.webp" alt="plate of food">
+            <img class="menu-section-img" src="assets/images/menu/drinks-img.webp" alt="plate of food">
         </div>
         <div id="bites" class="menu-section-wrapper">
             <div class="menu-section-txt">
@@ -175,18 +189,24 @@
                     €205.99
                 </p>
             </div>
-            <img class="menu-section-img"  src="assets/images/menu/bites-img.webp" alt="plate of food">
+            <img class="menu-section-img" src="assets/images/menu/bites-img.webp" alt="plate of food">
         </div>
     </section>
     <footer>
-        <a href="contact.html" id="footer-contact-link"><h1>reserve a spot</h1></a>
+        <a href="contact.html" id="footer-contact-link">
+            <h1>reserve a spot</h1>
+        </a>
         <div id="media-links">
-            <a href="https://www.facebook.com" target="_blank" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
-            <a href="https://www.twitter.com" target="_blank" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
-            <a href="https://www.instagram.com" target="_blank" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com" target="_blank"
+                aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
+            <a href="https://www.twitter.com" target="_blank"
+                aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
+            <a href="https://www.instagram.com" target="_blank"
+                aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </footer>
     <!-- FONT-AWESOME SCRIPT (CODE TAKEN FROM FONT-AWESOME SITE) -->
     <script src="https://kit.fontawesome.com/3920a9a7fd.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
