--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
         </div>
     </section>
     <footer>
-        <a href="contact.html" id="footer-contact-link"><h1>reserve a spot</h1></a>
+        <a href="contact.html" id="footer-contact-link"><h1>Reservations</h1></a>
         <div id="media-links">
             <a href="https://www.facebook.com" target="_blank" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
             <a href="https://www.twitter.com" target="_blank" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
