--- a/menu.html
+++ b/menu.html
@@ -194,7 +194,7 @@
     </section>
     <footer>
         <a href="contact.html" id="footer-contact-link">
-            <h1>reserve a spot</h1>
+            <h1>Reservations</h1>
         </a>
         <div id="media-links">
             <a href="https://www.facebook.com" target="_blank"
