added aria-label to footer links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav id="nav-bar">
             <ul id="nav-menu">
                 <li>
-                    <a href="contact.html"><h3>contact</h3></a>
+                    <a href="contact.html" aria-l><h3>contact</h3></a>
                 </li>
                 <li>
                     <a href="gallery.html"><h3>gallery</h3></a>
@@ -41,7 +41,7 @@
     </header>
     <section id="home-bg"></section>
     <footer>
-        <a href="contact.html" id="footer-contact-link"><h1>Reservations</h1></a>
+        <a href="contact.html" id="footer-contact-link" aria-label="Jump directly to our contact page"><h1>Reservations</h1></a>
         <div id="media-links">
             <a href="https://www.facebook.com" target="_blank" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
             <a href="https://www.twitter.com" target="_blank" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
