--- a/menu.html
+++ b/menu.html
@@ -193,7 +193,7 @@
         </div>
     </section>
     <footer>
-        <a href="contact.html" id="footer-contact-link">
+        <a href="contact.html" id="footer-contact-link" aria-label="Jump directly to our contact page">
             <h1>Reservations</h1>
         </a>
         <div id="media-links">
