--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <a href="index.html" id="logo">
+        <a href="index.html" id="logo" aria-label="Jump directly to our home-page">
             <h1>Hole in the Wall</h1>
         </a>
         <nav id="nav-bar">
