added aria-label to navbar contact-link

--- a/gallery.html
+++ b/gallery.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <header>
-        <a href="index.html" id="logo" aria-label="Jump directly to our home-page"><h1>Hole in the Wall</h1></a>
+        <a href="index.html" id="logo" aria-label="Jump directly to our homepage"><h1>Hole in the Wall</h1></a>
         <nav id="nav-bar">
             <ul id="nav-menu">
                 <li>
-                    <a href="contact.html"><h3>contact</h3></a>
+                    <a href="contact.html" aria-label="Jump directly to our contact page"><h3>contact</h3></a>
                 </li>
                 <li>
                     <a href="gallery.html" class="current-page"><h3>gallery</h3></a>
