--- a/menu.html
+++ b/menu.html
@@ -13,13 +13,13 @@
 
 <body>
     <header>
-        <a href="index.html" id="logo" aria-label="Jump directly to our home-page">
+        <a href="index.html" id="logo" aria-label="Jump directly to our homepage">
             <h1>Hole in the Wall</h1>
         </a>
         <nav id="nav-bar">
             <ul id="nav-menu">
                 <li>
-                    <a href="contact.html">
+                    <a href="contact.html" aria-label="Jump directly to our contact page">
                         <h3>contact</h3>
                     </a>
                 </li>
