added aria-label to navbar gallery-link

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
                     <a href="contact.html" aria-label="Jump directly to our contact page" class="current-page"><h3>contact</h3></a>
                 </li>
                 <li>
-                    <a href="gallery.html"><h3>gallery</h3></a>
+                    <a href="gallery.html" aria-label="Jump directly to our gallery page"><h3>gallery</h3></a>
                 </li>
                 <li>
                     <a href="menu.html"><h3>menu</h3></a>
