--- a/menu.html
+++ b/menu.html
@@ -24,7 +24,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="gallery.html">
+                    <a href="gallery.html" aria-label="Jump directly to our gallery page">
                         <h3>gallery</h3>
                     </a>
                 </li>
