added aria-label to navbar menu-link

--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
                     <a href="gallery.html" aria-label="Jump directly to our gallery page" class="current-page"><h3>gallery</h3></a>
                 </li>
                 <li>
-                    <a href="menu.html"><h3>menu</h3></a>
+                    <a href="menu.html" aria-label="Jump directly to our menu page"><h3>menu</h3></a>
                 </li>
                 <li>
                     <a href="about.html"><h3>about</h3></a>
