--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="menu.html" class="current-page">
+                    <a href="menu.html" aria-label="Jump directly to our menu page" class="current-page">
                         <h3>menu</h3>
                     </a>
                 </li>
