added aria-label to navbar about-link

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                     <a href="menu.html" aria-label="Jump directly to our menu page"><h3>menu</h3></a>
                 </li>
                 <li>
-                    <a href="about.html"><h3>about</h3></a>
+                    <a href="about.html" aria-label="Jump directly to our about page"><h3>about</h3></a>
                 </li>
                 <li >
                     <a href="index.html"><h3>home</h3></a>
