--- a/menu.html
+++ b/menu.html
@@ -34,7 +34,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="about.html">
+                    <a href="about.html" aria-label="Jump directly to our about page">
                         <h3>about</h3>
                     </a>
                 </li>
