added aria-label to navbar home-link

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                     <a href="about.html" aria-label="Jump directly to our about page" class="current-page"><h3>about</h3></a>
                 </li>
                 <li>
-                    <a href="index.html"><h3>home</h3></a>
+                    <a href="index.html" aria-label="Jump directly to our homepage"><h3>home</h3></a>
                 </li>
             </ul>
             <select onchange="window.open(this.value,'_self');" id="nav-dropdown">
