--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="index.html">
+                    <a href="index.html" aria-label="Jump directly to our homepage">
                         <h3>home</h3>
                     </a>
                 </li>
