added aria-label to navbar dropdown menu

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                     <a href="index.html" aria-label="Jump directly to our homepage"><h3>home</h3></a>
                 </li>
             </ul>
-            <select onchange="window.open(this.value,'_self');" id="nav-dropdown">
+            <select onchange="window.open(this.value,'_self');" id="nav-dropdown" aria-label="Dropdown menu for site navigation">
                 <option value="#">About</option>
                 <option value="index.html">Home</option>
                 <option value="menu.html">Menu</option>
