--- a/menu.html
+++ b/menu.html
@@ -44,7 +44,7 @@
                     </a>
                 </li>
             </ul>
-            <select onchange="window.open(this.value,'_self');" id="nav-dropdown">
+            <select onchange="window.open(this.value,'_self');" id="nav-dropdown" aria-label="Dropdown menu for site navigation">
                 <option value="#">Menu</option>
                 <option value="index.html">Home</option>
                 <option value="about.html">About</option>
