--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="index.html" aria-label="Jump directly to our homepage" class="current-page"><h3>home</h3></a>
                 </li>
             </ul>
-            <select onchange="window.open(this.value,'_self');" id="nav-dropdown">
+            <select onchange="window.open(this.value,'_self');" id="nav-dropdown" aria-label="Dropdown menu for site navigation">
                 <option value="#">Home</option>
                 <option value="about.html">About</option>
                 <option value="menu.html">Menu</option>
