--- a/404.html
+++ b/404.html
@@ -11,39 +11,39 @@
 </head>
 <body>
     <header>
-        <a href="index.html" id="logo"><h1>Hole in the Wall</h1></a>
+        <a href="index.html" id="logo" aria-label="Jump directly to our homepage"><h1>Hole in the Wall</h1></a>
         <nav id="nav-bar">
             <ul id="nav-menu">
                 <li>
-                    <a href="contact.html"><h3>contact</h3></a>
+                    <a href="contact.html" aria-label="Jump directly to our contact page" class="current-page"><h3>contact</h3></a>
                 </li>
                 <li>
-                    <a href="gallery.html"><h3>gallery</h3></a>
+                    <a href="gallery.html" aria-label="Jump directly to our gallery page"><h3>gallery</h3></a>
                 </li>
                 <li>
-                    <a href="menu.html"><h3>menu</h3></a>
+                    <a href="menu.html" aria-label="Jump directly to our menu page"><h3>menu</h3></a>
                 </li>
                 <li>
-                    <a href="about.html"><h3>about</h3></a>
+                    <a href="about.html" aria-label="Jump directly to our about page"><h3>about</h3></a>
                 </li>
-                <li>
-                    <a href="index.html" class="current-page"><h3>home</h3></a>
+                <li >
+                    <a href="index.html" aria-label="Jump directly to our homepage"><h3>home</h3></a>
                 </li>
             </ul>
-            <select onchange="window.open(this.value,'_self');" id="nav-dropdown">
-                <option value="#">Home</option>
+            <select onchange="window.open(this.value,'_self');" id="nav-dropdown" aria-label="Dropdown menu for site navigation">
+                <option value="#">Contact</option>
+                <option value="index.html">Home</option>
                 <option value="about.html">About</option>
-                <option value="menu.html">Menu</option>
-                <option value="gallery.html">Gallery</option>
-                <option value="contact.html">Contact</option>
+                <option value="menu.html">Gallery</option>
+                <option value="gallery.html">Contact</option>
             </select>
         </nav>
     </header>
-    <section id="oops-bg">
-        <a href="index.html">Take me back</a>
+    <section id="oops-bg" aria-label="Oops. 404 page not found">
+        <a href="index.html" aria-label="Go back to our homepage">Take me back</a>
     </section>
     <footer>
-        <a href="contact.html" id="footer-contact-link"><h1>Reservations</h1></a>
+        <a href="contact.html" id="footer-contact-link" aria-label="Jump directly to our contact page"><h1>Reservations</h1></a>
         <div id="media-links">
             <a href="https://www.facebook.com" target="_blank" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
             <a href="https://www.twitter.com" target="_blank" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
