added aria-label to homepage background image

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </select>
         </nav>
     </header>
-    <section id="home-bg"></section>
+    <section id="home-bg" aria-label="A picture of a restaurant table with view of a terras."></section>
     <footer>
         <a href="contact.html" id="footer-contact-link" aria-label="Jump directly to our contact page"><h1>Reservations</h1></a>
         <div id="media-links">
