--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
         </nav>
     </header>
     <section id="about">
-        <img src="assets/images/indoor-shot_1000x1500.webp" id="about-img" alt="">
+        <img src="assets/images/indoor-shot_1000x1500.webp" id="about-img" alt="A picture of the restaurant's interior">
         <article id="about-txt">
             <h2>About us:</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
