added aria-labels to menu-page side-bar links

--- a/menu.html
+++ b/menu.html
@@ -56,19 +56,19 @@
     <section id="menu">
         <div id="sidebar">
             <ul>
-                <li><a href="#starters">Starters</a></li>
+                <li><a href="#starters" aria-label="Jump to the starters section of our menu.">Starters</a></li>
             </ul>
             <ul>
-                <li><a href="#mains">Mains</a></li>
+                <li><a href="#mains" aria-label="Jump to the main courses section of our menu.">Mains</a></li>
             </ul>
             <ul>
-                <li><a href="#deserts">Deserts</a></li>
+                <li><a href="#deserts" aria-label="Jump to the deserts section of our menu.">Deserts</a></li>
             </ul>
             <ul>
-                <li><a href="#drinks">Drinks</a></li>
+                <li><a href="#drinks" aria-label="Jump to the drinks section of our menu.">Drinks</a></li>
             </ul>
             <ul>
-                <li><a href="#bites">Bites</a></li>
+                <li><a href="#bites" aria-label="Jump to the bites section of our menu.">Bites</a></li>
             </ul>
         </div>
         <div id="starters" class="menu-section-wrapper">
