added alt descriptions to menu images

--- a/menu.html
+++ b/menu.html
@@ -93,7 +93,7 @@
                     €205.99
                 </p>
             </div>
-            <img class="menu-section-img" src="assets/images/menu/starters-img.webp" alt="plate of food">
+            <img class="menu-section-img" src="assets/images/menu/starters-img.webp" alt="A picture of a plate with a slice of tortilla">
         </div>
         <div id="mains" class="menu-section-wrapper">
             <div class="menu-section-txt">
@@ -117,7 +117,7 @@
                     €205.99
                 </p>
             </div>
-            <img class="menu-section-img" src="assets/images/menu/mains-img.webp" alt="plate of food">
+            <img class="menu-section-img" src="assets/images/menu/mains-img.webp" alt="A picture of a bowl of red-lentil soup">
         </div>
         <div id="deserts" class="menu-section-wrapper">
             <div class="menu-section-txt">
@@ -141,7 +141,7 @@
                     €205.99
                 </p>
             </div>
-            <img class="menu-section-img" src="assets/images/menu/deserts-img.webp" alt="plate of food">
+            <img class="menu-section-img" src="assets/images/menu/deserts-img.webp" alt="A picture of a chocolate cake">
         </div>
         <div id="drinks" class="menu-section-wrapper">
             <div class="menu-section-txt">
@@ -165,7 +165,7 @@
                     €205.99
                 </p>
             </div>
-            <img class="menu-section-img" src="assets/images/menu/drinks-img.webp" alt="plate of food">
+            <img class="menu-section-img" src="assets/images/menu/drinks-img.webp" alt="A picture of a Mojito">
         </div>
         <div id="bites" class="menu-section-wrapper">
             <div class="menu-section-txt">
@@ -189,7 +189,7 @@
                     €205.99
                 </p>
             </div>
-            <img class="menu-section-img" src="assets/images/menu/bites-img.webp" alt="plate of food">
+            <img class="menu-section-img" src="assets/images/menu/bites-img.webp" alt="A picture of a piece of french cheese.">
         </div>
     </section>
     <footer>
