--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hole in the Wall is a fusion restaurant offering a range of dishes from all over the world">
+    <meta name="keywords" content="Hole in the Wall, restaurant, fusion, menu, The Hague">
     <title>Hole in the Wall</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Favicon -->
